<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Maydon.uz</string>
    <string name="tilni_tanlang" translatable="false">Choose Your Preferred Language</string>
    <string name="iltimos_til" translatable="false">Please select your language</string>
    <string name="nomer">Phone Number</string>
    <string name="tasdiqlash_cod">We will send you confirm code</string>
    <string name="raqamingiz">Enter your mobile number</string>
    <string name="davom_etish">Continue</string>
    <string name="google_bilan">Continue with Google</string>
    <string name="sms_kod">Sizga sms kod yuboriladi tez orada</string>
    <string name="sms_yubormoqdamiz">Sizga sms kod yubormoqdamiz</string>
    <string name="kod_kiriting">Iltimos, kelgan kodni kiriting</string>
    <string name="hato_kiritildi">Kod hato kiritildi...</string>
    <string name="otp_tekshiruv">OTP Verification</string>
    <string name="kod_yuborildi">An Authentecation code has been sent to:</string>
    <string name="kod_kelmadimi">Didn’t recieve code?</string>
    <string name="qayta_yuborish">Recieve Again.</string>
    <string name="muvofaqiyatli">Muvofaqiyatli</string>
    <string name="register">Register</string>
    <string name="getting_started">Getting Started</string>
    <string name="seems_you">Seems you are new here, Let’s set up your profile</string>
    <string name="name">Name</string>
    <string name="lost_name">Lost Name</string>
    <string name="by_creating">By creating an account, you agree to our <a href="https://www.google.com/">Term and Conditions</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bosh_sahifa">Bosh sahifa</string>
    <string name="stadionlar">Stadionlar</string>
    <string name="musobaqalar">Musobaqalar</string>
    <string name="koproq">Qo\'shimcha</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="toast_shart">Bizning shartimizga rozilik bering!</string>
</resources>