<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NumberActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:background="@drawable/ic_arrow_back" />

    <TextView
        android:layout_width="266dp"
        android:layout_height="72dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/andada"
        android:text="@string/raqamingiz"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_oddiy"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/andada"
        android:text="@string/tasdiqlash_cod"
        android:textColor="#D5171618"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nomer"
        android:orientation="horizontal"
        android:padding="3dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="#744D4D4E"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintTextColor="#B2171618">

        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/edit_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:fontFamily="serif"
            android:inputType="phone"
            android:lines="1"
            android:text="+998"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:met_mask="#### ## ### ## ##" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/number_btn"
        android:layout_width="339dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_radius"
        android:fontFamily="@font/andada"
        android:text="@string/davom_etish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/line_prog"
        android:layout_width="339dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_radius_off"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

    </LinearLayout>

    <TextView
        android:layout_width="28dp"
        android:layout_height="27dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/andada"
        android:text="OR"
        android:textColor="#BF171618"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_btn"
        android:layout_width="339dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_google"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:drawableStart="@drawable/yangi_google"
        android:padding="20dp"
        android:gravity="center"
        android:textColor="@color/black"/>


</LinearLayout>